# pytthresh

./: README.md  example.py  pyproject.toml  requirements.txt  setup.py
data/: 3D_sphere_64_uchar.raw  4D_sphere_32_uchar.raw  5D_sphere_16_uchar.raw
pytthresh/: __init__.py  cli.py  core.py  rle.py  tensor_network.py
